# Pentazemin

./: CMakeLists.txt  Makefile  README.md  main.c
btcnf/: psvbtjnf.txt  psvbtknf.txt
include/: adrenaline.h  adrenaline_compat.h  common.h  extra_patches.h  init_patch.h
rebootex/: CMakeLists.txt  Makefile  patches.c
src/: LflashFatfmt.c  adrenaline.c  impose_patch.c  init_patch.c  io_patch.c  loadexec.c  power_patch.c  syspatch.c  usbcam.c  vitamem.c
